# summarize-system

./: README.md  pyproject.toml
src/: main.py  pdf_extractor.py  summarizer.py
tests/: pdf_scraper.py
