[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Vipul <vipul.sarode007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
pdfminer-six = "^20240706"
python-dotenv = "^1.0.1"
langchain = "^0.2.12"
langchain-groq = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
